# spring-java-2

./: .gitignore  AUTHORIZATION-IMPLEMENTATION.md  AUTHORIZATION-TEST-GUIDE.md  CODE-QUALITY-GUIDE.md  COMPARISON-RESULTS.md  CORRECT-CVE-STATUS.md  COVERAGE-FIX-SUMMARY.md  CVE-2025-48924-ATTACK-TEST-REPORT.md  CVE-2025-61795-TEST-GUIDE.md  CVE-FIX-STATUS.md  CVE-MITIGATION-SUMMARY.md  CVE-MONITORING-FAIL-FIX.md  CVE-MONITORING-SETUP.md  DOTNET-CODE-QUALITY-GUIDE.md  DOTNET-REPORTS-GUIDE.md  Directory.Build.props  Dockerfile  Dockerfile.alpine-distroless  Dockerfile.alpine-distroless-clean  Dockerfile.alpine-distroless-from-base  Dockerfile.alpine-distroless-health  Dockerfile.alpine-distroless-offline  Dockerfile.alpine-distroless-otel  Dockerfile.alpine-distroless-prebuilt  Dockerfile.alpine-distroless-simple  Dockerfile.alpine-distroless-specific  Dockerfile.alpine-distroless-v2  Dockerfile.alpine-ultra-minimal  Dockerfile.base-runtime  Dockerfile.distroless.debug  Dockerfile.distroless.health  Dockerfile.native  Dockerfile.secure  FINAL-COMPARISON.md  GITHUB-ACTIONS-SETUP.md  K8S-OTEL-SETUP-GUIDE.md  NATIVE-IMAGE-GUIDE.md  OWASP-DEPENDENCY-CHECK-SETUP.md  SECURITY-REPORT-ANALYSIS-7.md  SECURITY-REPORT-ANALYSIS.md  (+113 more)
.jit/: jit-plan.yml
SpringJavaEquivalent.Tests/: SimpleTest.cs  TokenControllerTests.cs
TestResults/: opencover-report.xml.backup
arcchitecture documents/: .$EKS-ENV_PC.drawio.dtmp  .$azure-devops-template-pipeline.drawio.bkp  .$ci-pipeline-azure-devops.drawio.bkp  .$developer-to-eks.drawio.bkp  .$devsecops-actions-teams.drawio.bkp  EKS-ENV_PC.drawio  azure-devops-template-pipeline.drawio  ci-pipeline-azure-devops.drawio  developer-to-eks.drawio  devsecops-actions-teams.drawio
dotnet-spring-equivalent/: .dockerignore  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.distroless  Dockerfile.distroless-minimal  Dockerfile.distroless-simple  Dockerfile.scratch  Program.cs  (+23 more)
python-spring-equivalent/: .gitignore  ALPINE-SECURITY-UPGRADE.md  CVE-2024-23342-MITIGATION.md  CVE-COMPARISON.md  DOCKER-SECURITY-FIXES.md  DOCKER-SECURITY-REPORT.md  Dockerfile  Dockerfile.alpine  Dockerfile.k8s  Makefile  README.md  SECURITY-REPORT.md  bandit-report.json  demo.py  docker-compose.yml  docker-security-scan.txt  dockerfile-insecure-Dockerfile.distroless  env.example  prometheus.yml  pyproject.toml  requirements.txt  run.py
python-spring-equivalent/python_spring_equivalent/: __init__.py  config.py  main.py  models.py  security.py  security_mitigation.py  services.py  telemetry.py
python-spring-equivalent/python_spring_equivalent/routers/: __init__.py  cache.py  health.py  jwt.py  metrics.py
python-spring-equivalent/tests/: __init__.py  test_cache.py  test_health.py  test_jwt.py  test_main.py
(+176 files in other folders)
